--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    overflow: hidden;
 }
 
 #playerinfo {
@@ -65,8 +66,11 @@ b a {
     color: rgb(129, 129, 129);
 }
 
+.disconnected {
+    color: red;
+}
 
-.cards {
+#topcard {
     width: 80%;
     height: 100%;
     border: 1px solid black;
@@ -78,7 +82,7 @@ b a {
     align-items: center;
 }
 
-.cards h1 {
+#topcard h1 {
     height: 120px;
 }
 
@@ -94,4 +98,17 @@ b a {
     width: 20%;
     height: 100%;
     float: left;
+}
+
+.cards {
+    background: url('./textures/uno-back.png');
+    width: 241.5px;
+    height: 362px;
+    position: absolute;
+    bottom: 0;
+    left: 80%;
+}
+
+.cards:hover {
+    bottom: 80px;
 }
